# nanoGPT

./: pyproject.toml
